2010-10-09  Robert Larice
 * src/frontend/terminal.c ,
 * src/include/complex.h ,
 * src/include/fteparse.h ,
 * src/main.c ,
 * src/maths/sparse/spbuild.c ,
 * src/maths/sparse/spdefs.h ,
 * src/misc/ivars.c ,
 * src/spicelib/parser/ifnewuid.c ,
 * src/spicelib/parser/inperror.c ,
 * src/tclspice.c :
    remove ancient #defines for AND OR NOT   substitute with && || !

2010-10-09  Robert Larice
 * src/include/profile.h :
    remove obsolete #defines for BEGIN END LENGTH FORWARD

2010-10-09  Robert Larice
 * src/include/fteparse.h :
    remove obsolete #defines for MAXARITY NUM STRING PNODE

2010-10-09  Robert Larice
 * src/include/complex.h :
    remove typedef for _complex, which is used nowhere

2010-10-08  Robert Larice
 * src/frontend/evaluate.c ,
 * src/frontend/parse.c ,
 * src/include/fteext.h :
    collect some cx_*() prototypes in "cmath2.h"

2010-10-08  Robert Larice
 * src/main.c :
    remove winmessage() prototype, there is no such thing (hopefully)

2010-10-08  Robert Larice
 * src/include/inpdefs.h ,
 * src/spicelib/parser/inp.h :
    collect the other INP*() prototypes in "inpdefs.h"

2010-10-08  Robert Larice
 * src/include/inpdefs.h ,
 * src/spicelib/parser/inp.h ,
 * src/spicelib/parser/inppas2.c :
    collect the INP2?() prototypes in "inp.h"

2010-10-08  Robert Larice
 * src/include/inpptree.h ,
 * src/spicelib/parser/inp.h :
    collect the PT*() prototypes in "inp.h"

2010-10-08  Robert Larice
 * src/frontend/parse.c ,
 * src/include/fteext.h :
    consider the op_*() functions to be less public

2010-10-08  Robert Larice
 * src/spicelib/devices/bsim3soi/b4soiinit.c ,
 * src/spicelib/devices/bsim3soi_dd/b3soiddinit.c ,
 * src/spicelib/devices/bsim3soi_fd/b3soifdinit.c ,
 * src/spicelib/devices/bsim3soi_pd/b3soipdinit.c ,
 * src/spicelib/devices/dio/dioinit.c ,
 * src/spicelib/devices/hisim/hsm1init.c :
    avoid function redeclaration (devices)

2010-10-08  Robert Larice
 * src/include/sensgen.h ,
 * src/spicelib/analysis/cktsgen.c :